2010-07-27  Juanma Barranquero  <lekktu@gmail.com>

	* help-fns.el (find-lisp-object-file-name): Doc fix (bug#6494).

	* cedet/semantic/db-file.el (object-write): Fix typo in docstring.

	* time.el (display-time-day-and-date): Remove spurious * in docstring.
	(display-time-world-buffer-name, display-time-world-mode-map):
	Fix typos in docstrings.

2010-07-27  Shyam Karanatt  <shyam@swathanthran.in>  (tiny change)

	* image-mode.el (image-display-size): New function.
	(image-forward-hscroll, image-next-line, image-eol, image-eob)
	(image-mode-fit-frame): Use it (Bug#6639).

2010-07-27  Chong Yidong  <cyd@stupidchicken.com>

	* dired.el (dired-buffers-for-dir): Handle list values of
	dired-directory (Bug#6636).

2010-07-26  Sam Steingold  <sds@gnu.org>

	* mouse.el (mouse-yank-primary, mouse-yank-secondary):
	Do not call `x-get-selection' the second time, reuse the value.

2010-07-26  Daiki Ueno  <ueno@unixuser.org>

	* epa-mail.el (epa-mail-mode-map): Add alternative key bindings
	which consist of control chars only.  Suggested by Richard
	Stallman.

2010-07-25  Daiki Ueno  <ueno@unixuser.org>

	* epa-file.el (epa-file-insert-file-contents): Check if LOCAL-FILE
	exists before passing an error to find-file-not-found-functions
	(bug#6723).

2010-07-23  Lukas Huonker  <l.huonker@gmail.com>

	* play/tetris.el (tetris-tty-colors, tetris-x-colors, tetris-blank):
	Remove leading nil element, adjust values.
	(tetris-shapes, tetris-shape-scores):
	Change representation of shapes and remove some redundancy.
	(tetris-get-shape-cell, tetris-shape-width, tetris-draw-next-shape)
	(tetris-draw-shape, tetris-erase-shape, tetris-test-shape):
	Adjust for working with new representation of shapes.
	(tetris-shape-rotations): New function.
	(tetris-move-bottom, tetris-move-left, tetris-move-right)
	(tetris-rotate-prev, tetris-rotate-next):
	Adjust for working with the new version of tetris-test-shape.

2010-07-23  Markus Triska  <markus.triska@gmx.at>
